<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>message_filters</name>
  <version>1.13.0</version>
  <description>
    A set of message filters which take in messages and may output those messages at a later time, based on the conditions that filter needs met.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/message_filters</url>

  <author>Josh Faust</author>
  <author>Vijay Pradeep</author>

  <buildtool_depend>ament</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>ros2_console</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>ros2_console</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_nose</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
