<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>xmlrpcpp</name>
  <version>1.13.0</version>
  <description>
    XmlRpc++ is a C++ implementation of the XML-RPC protocol. This version is
    heavily modified from the package available on SourceForge in order to
    support roscpp's threading model. As such, we are maintaining our
    own fork.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>LGPL-2.1</license>

  <url>http://xmlrpcpp.sourceforge.net</url>
  <author>Chris Morley</author>
  <author>Konstantin Pilipchuk</author>
  <author>Morgan Quigley</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <rosdoc external="http://xmlrpcpp.sourceforge.net/doc/hierarchy.html" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
